# NovaPcSuite

./: .gitignore  .mergify.yml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING-PLUGINS.md  Cargo.toml  FUTURE_FEATURES.md  IMPLEMENTATION-SUMMARY.md  LICENSE  LICENSE-APACHE  README-EXTENDED-BACKUP.md  README.md  README_RUST.md  UI-MOCKUP.md  go.mod  go.sum  main.go  pyproject.toml  pytest.ini  requirements.txt
.github/: CODEOWNERS  labels.yml
.github/workflows/: auto-merge.yml  ci.yml  label-sync.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: adb.rs  backup.rs  config.rs  device.rs  error.rs  lib.rs  manifest.rs  restore.rs  scanner.rs
demo/: file2.txt
docs/: automation.md  companion_api.md  util-codice-fiscale.md
internal/backup/: engine.go  engine_test.go
internal/chunk/: store.go  store_test.go
internal/manifest/: snapshot.go
internal/progress/: broadcaster.go
nova/: __init__.py  cli.py  config.py
nova-adb/: Cargo.toml
nova-adb/src/: lib.rs
nova-backup/: Cargo.toml
nova-backup/src/: duplicates.rs  lib.rs  planner.rs  scanner.rs  types.rs
nova-cli/: Cargo.toml
nova-cli/src/: main.rs
nova-core/: Cargo.toml
nova-core/src/: cli.rs  config.rs  demo.rs  device.rs  error.rs  lib.rs  logging.rs  main.rs
nova-core/src/util/: codice_fiscale.rs  mod.rs
nova-formats/: Cargo.toml
nova-formats/src/: contacts.rs  exporters.rs  lib.rs
nova-mtp/: Cargo.toml
nova-mtp/src/: lib.rs
nova-plugin-api/: Cargo.toml
nova-plugin-api/src/: config.rs  descriptor.rs  events.rs  lib.rs  registry.rs  sandbox.rs
nova-ui/: Cargo.toml
nova-ui/src/: app.rs  commands.rs  extensions.rs  index.html  lib.rs  state.rs
nova-ui/src-tauri/: Cargo.toml  tauri.conf.json
nova-ui/src-tauri/src/: main.rs
nova/adb/: __init__.py  client.py  content_providers.py  device.py  package.py  pull.py  shell.py
nova/apps/: __init__.py  apk_backup.py
nova/backup/: __init__.py  executor.py  manifest.py  restore.py  rules.py  scanner.py  storage.py
nova/data/: __init__.py  calllog.py  contacts.py  sms.py
nova/gui/: __init__.py  app.py
nova/util/: __init__.py  compression.py  hashing.py  logging.py  paths.py  timeutil.py
plugins/example-plugin/: Cargo.toml  nova_plugin.toml
plugins/example-plugin/src/: lib.rs
src/: backup.rs  chunk.rs  error.rs  lib.rs  main.rs  manifest.rs  recovery.rs  restore.rs  scheduling.rs
src/backup/: mod.rs  nova_pc_suite_backup.rs  report.rs
src/cli/: backup.rs  devices.rs  manifest.rs  mod.rs  report.rs  scan.rs
src/dedupe/: audio_stub.rs  image.rs  mod.rs
src/plugins/: events.rs  mod.rs
src/plugins/wasm/: mod.rs  runtime.rs
src/restore/: mod.rs
src/scheduler/: mod.rs
src/telephony/: mod.rs  provider.rs
tests/: test_contacts_export.py  test_manifest.py  test_scanner.py
