[package]
name = "nova_pc_suite"
version = "0.1.0"
edition = "2021"
authors = ["linuxiano85"]
description = "Advanced PC backup and maintenance suite with chunked Merkle-based snapshots"
license = "MIT"
repository = "https://github.com/linuxiano85/NovaPcSuite"
keywords = ["backup", "deduplication", "merkle", "chunking", "restore"]
categories = ["command-line-utilities", "filesystem"]

[features]
default = ["encryption", "telephony"]
encryption = ["chacha20poly1305", "age", "zeroize"]
wasm-plugins = ["wasmtime"]
telephony = ["async-trait"]

[dependencies]
# Core functionality
blake3 = "1.5"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["rt", "fs", "sync", "macros", "rt-multi-thread", "io-util", "time"] }
clap = { version = "4.4", features = ["derive"] }

# Image processing for perceptual hashing
image = "0.24"

# Encryption (feature-gated)
chacha20poly1305 = { version = "0.10", optional = true }
age = { version = "0.10", optional = true }
zeroize = { version = "1.7", optional = true }

# Async traits for telephony
async-trait = { version = "0.1", optional = true }

# WASM runtime (feature-gated)
wasmtime = { version = "15.0", optional = true }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
walkdir = "2.4"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.8"
pretty_assertions = "1.4"

[[bin]]
name = "nova-pc-suite"
path = "src/main.rs"

[lib]
name = "nova_pc_suite"
path = "src/lib.rs"