[package]
name = "nova-pc-suite"
version = "0.1.0"
edition = "2021"
authors = ["linuxiano85"]
license = "MIT"
description = "A comprehensive backup and restore system with chunk-based deduplication"
repository = "https://github.com/linuxiano85/NovaPcSuite"

[dependencies]
# Core functionality
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# CLI and argument parsing
clap = { version = "4.0", features = ["derive", "env"] }

# Cryptography and hashing
blake3 = "1.5"

# File I/O and compression
flate2 = "1.0"

# Configuration and serialization
toml = "0.8"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Time and scheduling
chrono = { version = "0.4", features = ["serde"] }

# File system operations
walkdir = "2.4"

# Data structures
indexmap = "2.0"

# System directories
dirs = "5.0"

[features]
default = ["recovery"]
recovery = []

[[bin]]
name = "nova-cli"
path = "src/bin/nova-cli.rs"

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"