[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["NovaPcSuite Contributors"]
repository = "https://github.com/linuxiano85/NovaPcSuite"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
clap = { version = "4.0", features = ["derive"] }

# File system and path operations
walkdir = "2.0"
dirs = "5.0"

# Testing
tempfile = "3.8"