[tool.poetry]
name = "novapcsuite"
version = "0.1.0"
description = "A modular, extensible PC suite for Android device backup and restore on Linux"
authors = ["NovaPcSuite Contributors"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/linuxiano85/NovaPcSuite"
packages = [{include = "nova"}]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
pydantic = "^2.5.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
isort = "^5.13.0"
mypy = "^1.8.0"

[tool.poetry.scripts]
novapcsuite = "nova.cli:main"
novapcsuite-gui = "nova.gui.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true