[package]
name = "nova-backup"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
nova-core.workspace = true
nova-adb.workspace = true
nova-mtp.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tree_magic_mini.workspace = true