[package]
name = "nova-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core application for NovaPcSuite"

[[bin]]
name = "nova"
path = "src/main.rs"

[[bin]]
name = "demo"
path = "src/demo.rs"

[dependencies]
nova-plugin-api = { path = "../nova-plugin-api" }
nova-ui = { path = "../nova-ui" }
example-plugin = { path = "../plugins/example-plugin" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }