[package]
name = "nova-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core application for NovaPcSuite"

[features]
default = ["cf"]
cf = []

[[bin]]
name = "nova"
path = "src/main.rs"

[[bin]]
name = "demo"
path = "src/demo.rs"

[[bin]]
name = "nova-cli"
path = "src/cli.rs"

[dependencies]
nova-plugin-api = { path = "../nova-plugin-api" }
nova-ui = { path = "../nova-ui" }
example-plugin = { path = "../plugins/example-plugin" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
chrono = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
once_cell = "1.19"

[dev-dependencies]
rstest = { workspace = true }