[package]
name = "nova-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "User interface for NovaPcSuite"

[dependencies]
nova-plugin-api = { path = "../nova-plugin-api" }

eframe = { workspace = true }
egui = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }