[package]
name = "novapcsuite"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "CLI tool for Android device management and backup operations"

[[bin]]
name = "novapcsuite"
path = "src/main.rs"

[dependencies]
novapcsuite-core = { path = "../core" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }