[package]
name = "novapcsuite-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core library for NovaPcSuite Android device management"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
walkdir = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"