[package]
name = "example-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Example plugin demonstrating NovaPcSuite plugin architecture"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nova-plugin-api = { path = "../../nova-plugin-api" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }